# CorpusCollector

./: .gitignore  Makefile  README.md  pyproject.toml
src/configs/: configs.yaml  form_configs.yaml  logging.yaml  news_configs.yaml  request_configs.yaml  scraping_configs.yaml
src/helpers/: article_crawler.py  article_parser.py  form_crawler.py  lang_detector.py  news_crawler.py  post_processor.py
src/utils/: logger.py
src/utils/adapters/: driver.py
src/utils/scripts/: commentParser.js
